Update baseURL in config.yml to point to the blog domain

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://smarttechventures-au.github.io" 
+baseURL: "https://blog.smarttechventures.au/" 
 title: Smart Tech Ventures
 theme: PaperMod
 
