Fix CNAME and baseURL formatting in configuration files

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://blog.smarttechventures.au/" 
+baseURL: "https://blog.smarttechventures.au/"
 title: Smart Tech Ventures
 theme: PaperMod
 
@@ -17,7 +17,7 @@ menu:
           weight: 2
         - name: Data
           url: data/
-          weight: 4 
+          weight: 4
 params:
     description: "Smart Tech Ventures is a venture capital firm that invests in early-stage technology companies. We focus on startups that are leveraging cutting-edge technologies to solve real-world problems and create value for society."
     author: Chris McKelt
@@ -59,7 +59,7 @@ params:
             - name: Archive
               url: archive/
             - name: Blog
-              url: https://smarttechventures-au.github.io
+              url: https://blog.smarttechventures.au
 
     socialIcons:
         - name: Website
@@ -91,7 +91,7 @@ markup:
             unsafe: true
     highlight:
         guessSyntax: true
-        style: autumn 
+        style: autumn
     tableOfContents:
         endLevel: 2
         ordered: false
