--- a/config.yml
+++ b/config.yml
@@ -16,8 +16,8 @@ menu:
       url: articles/
       weight: 2
 params:
-  description: "Smart Tech Ventures is a venture capital firm that invests in early-stage technology companies. We focus on startups that are leveraging cutting-edge technologies to solve real-world problems and create value for society."
-  author: Chris McKelt
+  description: "Smart Tech Ventures offer several services including technology strategy, cloud architecture, data engineering and project delivery"
+  author: Smart Tech
   googleAnalyticsID: "G-01MGQXJNBV"
   DateFormat: "January 2006"
   defaultTheme: light
