--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://chrismckeltblog.netlify.app/"
+baseURL: "https://blog.mckelt.com/"
 title: Chris McKelt - Remembering Thoughts
 theme: PaperMod
 
