--- a/netlify.toml
+++ b/netlify.toml
@@ -27,3 +27,6 @@
   [contentTypes.'text/org']
   [contentTypes.'text/pandoc']
   [contentTypes.'text/rst']
+
+[params.googleSearch]
+  cx = "d3c76880e4ff64f5b"
