--- a/config.yml
+++ b/config.yml
@@ -30,7 +30,7 @@ menu:
 params:
   description: "Remembering Thoughts across technology strategy, cloud architecture, data engineering and project delivery"
   author: Smart Tech
-  googleAnalyticsID: "UA-9649471-1"
+  googleAnalyticsID: "G-GPSK740W4P"
   DateFormat: "January 2006"
   defaultTheme: light
   hideFooter: false
